[gd_scene load_steps=3 format=3 uid="uid://dhy0aj7k743jx"]

[ext_resource type="AudioStream" uid="uid://cje6373yknfle" path="res://examples/deusesque.xm" id="1_6yod7"]
[ext_resource type="Script" path="res://examples/1-Simple Playback/simple_playback.gd" id="1_flpse"]

[node name="SimplePlayback" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_flpse")

[node name="CenterContainer" type="CenterContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer"]
layout_mode = 2
alignment = 1

[node name="HBoxContainer" type="HBoxContainer" parent="CenterContainer/VBoxContainer"]
layout_mode = 2
alignment = 1

[node name="PlayBtn" type="Button" parent="CenterContainer/VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Play"

[node name="PauseBtn" type="Button" parent="CenterContainer/VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Pause"

[node name="StopBtn" type="Button" parent="CenterContainer/VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Stop
"

[node name="InfoText" type="Label" parent="CenterContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
unique_name_in_owner = true
stream = ExtResource("1_6yod7")

[connection signal="pressed" from="CenterContainer/VBoxContainer/HBoxContainer/PlayBtn" to="." method="_on_play_btn_pressed"]
[connection signal="pressed" from="CenterContainer/VBoxContainer/HBoxContainer/PauseBtn" to="." method="_on_pause_btn_pressed"]
[connection signal="pressed" from="CenterContainer/VBoxContainer/HBoxContainer/StopBtn" to="." method="_on_stop_btn_pressed"]
